preload effect on body ok

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My App</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-      rel="stylesheet"
-    />
+    <title>JMAT|🖥</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" rel="stylesheet"/> -->
     <!-- <link rel="stylesheet" href="styles2.css"> -->
     <link rel="stylesheet" href="main.css" />
+    <!-- <noscript><link rel="stylesheet" href="../static/css/noscript.css" /></noscript> -->
 
     <!-- <link rel="stylesheet" href="styles.css" /> -->
   </head>
 
-  <body>
+  <body class="is-preload">
     <div id="root"></div>
-    <div class="welcome-back"></div>
+    <!-- <div class="welcome-back"></div> -->
     <!-- <script src="../src/index.js" type="text/jsx"></script> -->
   </body>
 </html>
