--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- <link href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" rel="stylesheet"/> -->
     <!-- <link rel="stylesheet" href="styles2.css"> -->
-    <link rel="stylesheet" href="main.css" />
+    <!-- <link rel="stylesheet" href="main.css" /> -->
     <!-- <noscript><link rel="stylesheet" href="../static/css/noscript.css" /></noscript> -->
 
     <!-- <link rel="stylesheet" href="styles.css" /> -->
