--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
   <body class="is-preload">
     <noscript>
       You need to enable JavaScript to run this app.
-    </noscript>
+    </noscript> 
+    <div id="backdrop-root"></div>
+    <div id="overlay-root"></div>
     <div id="intro"></div>
     <div id="root"></div>
     <!--
